Blender 2.78 crashes after loading data from a blendfile #49856

Closed
opened 2016-10-27 14:36:25 +02:00 by Marc · 17 comments

System Information
Windows 7 64bit, NVIDIA Quadro K3100M

Blender Version
Broken: 2.78a
Worked: 2.77a

Short description of error

Blender 2.78 crashes after loading data from a blendfile

Exact steps for others to reproduce the error

I'm importing data from another blendfile as follows:

  def import_from_file(filepath):
      with bpy.data.libraries.load(filepath) as (data_from, data_to):
          collections = 'objects', 'groups', 'materials'
          for collection_name in collections:
              collection_from = getattr(data_from, collection_name)
              collection_to = getattr(data_to, collection_name)
              for obj in collection_from:
                  collection_to.append(obj) 
          
      for obj in data_to.objects:
          bpy.context.scene.objects.link(obj)

The import works fine but afterwards some API operations crash Blender with Error: EXCEPTION_ACCESS_VIOLATION. For example bpy.ops.object.select_all(action='DESELECT').

This is working correctly in 2.77a.

**System Information** Windows 7 64bit, NVIDIA Quadro K3100M **Blender Version** Broken: 2.78a Worked: 2.77a **Short description of error** Blender 2.78 crashes after loading data from a blendfile **Exact steps for others to reproduce the error** I'm importing data from another blendfile as follows: ``` def import_from_file(filepath): with bpy.data.libraries.load(filepath) as (data_from, data_to): collections = 'objects', 'groups', 'materials' for collection_name in collections: collection_from = getattr(data_from, collection_name) collection_to = getattr(data_to, collection_name) for obj in collection_from: collection_to.append(obj) for obj in data_to.objects: bpy.context.scene.objects.link(obj) ``` The import works fine but afterwards some API operations crash Blender with `Error: EXCEPTION_ACCESS_VIOLATION`. For example `bpy.ops.object.select_all(action='DESELECT')`. This is working correctly in 2.77a.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @schlamar

Added subscriber: @schlamar

#49891 was marked as duplicate of this issue

#49891 was marked as duplicate of this issue

Added subscriber: @mont29

Added subscriber: @mont29

Please follow our submission template and guidelines and make a complete, valid bug report, with required info, precise description of the issue, precise steps to reproduce it, small and simple .blend and/or other files to do so if needed, etc.

Please follow our submission template and guidelines and make a complete, valid bug report, with required info, precise description of the issue, precise steps to reproduce it, **small and simple** .blend and/or other files to do so if needed, etc.
Author

main.blend

data.blend

Attached two files. Running the main.py script of the main.blend file reproduces this issue.

[main.blend](https://archive.blender.org/developer/F387985/main.blend) [data.blend](https://archive.blender.org/developer/F387986/data.blend) Attached two files. Running the main.py script of the main.blend file reproduces this issue.
Bastien Montagne self-assigned this 2016-10-29 09:31:32 +02:00

Confirmed, think the issue here is that data_to.objects holds pointer references to linked data-blocks, but some of those data-blocks may have been copied (and then deleted) during the 'make local' process following linking, for append operation.

Confirmed, think the issue here is that `data_to.objects` holds pointer references to linked data-blocks, but some of those data-blocks may have been copied (and then deleted) during the 'make local' process following linking, for append operation.

Added subscriber: @tiles

Added subscriber: @tiles

This issue was referenced by 1ee43c5aef

This issue was referenced by 1ee43c5aef03c1a3218163d9450545fdb9ad4482

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author

@mont29 Is there an ETA for the next release including this fix?

@mont29 Is there an ETA for the next release including this fix?

No, nothing is decided yet, would not happen before two months at least I think…

No, nothing is decided yet, would not happen before two months at least I think…
Author

Changed status from 'Resolved' to: 'Open'

Changed status from 'Resolved' to: 'Open'
Marc reopened this issue 2017-02-14 15:18:11 +01:00
Author

This is not resolved in 2.78b!

My script to reproduce the issue (see my comment ) is still crashing (Windows 7, 64bit).

This is not resolved in 2.78b! My script to reproduce the issue ([see my comment ](https://developer.blender.org/T49856#401375)) is still crashing (Windows 7, 64bit).
Author

The daily build (930186d) does work. Could it be that this fix didn't make it in the release? :(

The daily build (930186d) does work. Could it be that this fix didn't make it in the release? :(

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

2.78b is a 'performances' release, not a bugfix release. Please wait for 2.79 (and do not reopen reports like that, too!).

2.78b is a 'performances' release, not a bugfix release. Please wait for 2.79 (and do not reopen reports like that, too!).
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#49856
No description provided.